<?xml version="1.0"?>
<package format="3">
  <name>wheelchair_arm_pkg</name>
  <version>0.1.0</version>
  <description>ROS2 nodes for wheelchair assistive arm</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
